# container-registry-card-catalog

./: .gitignore  LICENSE  LICENSE-VCL.md  README.md  api_detail_modal.py  config_manager.py  container_card_catalog.py  container_registry_card_catalog.py  debug_console.py  info_modal.py  local_container_client.py  mock_data.py  pyproject.toml  registry_client.py  registry_config_modal.py  requirements.txt  tag_detail_modal.py  tags_view.py
